<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Balda</string>
    <string name="quit_dialog_message">Exit: Are you sure?</string>
    <string name="exit_yes">Yes</string>
    <string name="exit_no">No</string>
    <string name="allowed_characters">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q" translatable="false">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w" translatable="false">W</string>
    <string name="x" translatable="false">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="sha" translatable="false">Ш</string>
    <string name="shcha" translatable="false">Щ</string>
    <string name="soft" translatable="false">Ь</string>
    <string name="iii" translatable="false">Ы</string>
    <string name="hard" translatable="false">Ъ</string>
    <string name="eee" translatable="false">Э</string>
    <string name="yu" translatable="false">Ю</string>
    <string name="ya" translatable="false">Я</string>
    <string name="back">BACK</string>
    <string name="delete">DELETE</string>
    <string name="done">DONE</string>
    <string name="yo" translatable="false">Ё</string>
    <string name="cha" translatable="false">Ч</string>
    <string name="id" translatable="false">id</string>
    <string name="cell_name_prefix" translatable="false">cell_</string>
    <string name="player_image">player image</string>
    <string name="opponent_image">opponent image</string>
    <string name="zeroScore" translatable="false">0</string>
    <string name="player_label">Player</string>
    <string name="opponent">Opponent</string>
    <string name="on_key_pressed_listener_warning" translatable="false">
        " should implement OnKeyPressedListener interface"
    </string>
    <string name="list_overflow" translatable="false">
        List length overflow. Position shouldn\'t be greater than the size of the list
    </string>
    <string name="word_formatted" translatable="false">%1$d. %2$s</string>
    <string name="on_cell_pressed_listener_warning" translatable="false">
       " should implement OnCellPressedListener interface"
    </string>
    <string name="skip_turn_dialog_message">Do you want to skip your turn?</string>
    <string name="skip_turn_yes">Yes</string>
    <string name="skip_turn_no">No</string>
    <string name="check_range_exception_message" translatable="false">The int state value should be in range 0..4 inclusive</string>
    <string name="clear_word_dialog_message">Do you want to clear the word?</string>
    <string name="clear_word_yes">Yes</string>
    <string name="clear_word_no">No</string>
    <string name="word_fragment_message">Choose the word</string>
    <string name="clear_word_button">Clear</string>
    <string name="enter_word_button">Enter</string>
</resources>