<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Набор вертикальных гайдлайнов делит экран на 8 вертикальных полос -->

    <!-- Вертикальный guideline с относительным отступом 12.5% -->
    <android.support.constraint.Guideline
        android:id="@+id/line_12v5"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.125"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!-- Вертикальный guideline с относительным отступом 25% -->
    <android.support.constraint.Guideline
        android:id="@+id/line_25v"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!-- Вертикальный guideline с относительным отступом 37.5% -->
    <android.support.constraint.Guideline
        android:id="@+id/line_37v5"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.375"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!-- Вертикальный guideline с относительным отступом 50% -->
    <android.support.constraint.Guideline
        android:id="@+id/line_50v"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!-- Вертикальный guideline с относительным отступом 62.5% -->
    <android.support.constraint.Guideline
        android:id="@+id/line_62v5"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.625"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!-- Вертикальный guideline с относительным отступом 75% -->
    <android.support.constraint.Guideline
        android:id="@+id/line_75v"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!-- Вертикальный guideline с относительным отступом 87.5% -->
    <android.support.constraint.Guideline
        android:id="@+id/line_87v5"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.875"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!-- Набор горизонтальных гайдлайнов делит экран на 4 горизонтальных полосы -->

    <!-- Горизонтальный guideline с относительным отступом 25% -->
    <android.support.constraint.Guideline
        android:id="@+id/line_25h"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!-- Горизонтальный guideline с относительным отступом 50% -->
    <android.support.constraint.Guideline
        android:id="@+id/line_50h"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!-- Горизонтальный guideline с относительным отступом 75% -->
    <android.support.constraint.Guideline
        android:id="@+id/line_75h"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!-- Кнопки, привязанные к гайдлайнам -->

    <!-- Первый ряд кнопок -->

    <Button
        android:id="@+id/A"
        android:text="@string/a"
        style="@style/KeyboardButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/line_12v5"
        app:layout_constraintBottom_toBottomOf="@id/line_25h"/>

    <Button
        android:id="@+id/B"
        android:text="@string/b"
        style="@style/KeyboardButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/line_12v5"
        app:layout_constraintRight_toRightOf="@id/line_25v"
        app:layout_constraintBottom_toBottomOf="@id/line_25h"/>

    <Button
        android:id="@+id/C"
        android:text="@string/c"
        style="@style/KeyboardButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/line_25v"
        app:layout_constraintRight_toRightOf="@id/line_37v5"
        app:layout_constraintBottom_toBottomOf="@id/line_25h"/>

    <Button
        android:id="@+id/D"
        android:text="@string/d"
        style="@style/KeyboardButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/line_37v5"
        app:layout_constraintRight_toRightOf="@id/line_50v"
        app:layout_constraintBottom_toBottomOf="@id/line_25h" />

    <Button
        android:id="@+id/E"
        android:text="@string/e"
        style="@style/KeyboardButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/line_50v"
        app:layout_constraintRight_toRightOf="@id/line_62v5"
        app:layout_constraintBottom_toBottomOf="@id/line_25h"/>

    <Button
        android:id="@+id/F"
        android:text="@string/f"
        style="@style/KeyboardButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/line_62v5"
        app:layout_constraintRight_toRightOf="@id/line_75v"
        app:layout_constraintBottom_toBottomOf="@id/line_25h"/>

    <Button
        android:id="@+id/G"
        android:text="@string/g"
        style="@style/KeyboardButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/line_75v"
        app:layout_constraintRight_toRightOf="@id/line_87v5"
        app:layout_constraintBottom_toBottomOf="@id/line_25h"/>

    <Button
        android:id="@+id/H"
        android:text="@string/h"
        style="@style/KeyboardButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/line_87v5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/line_25h"/>

    <!-- / Первый ряд кнопок -->

    <!-- Второй ряд кнопок -->

    <Button
        android:id="@+id/I"
        android:text="@string/i"
        style="@style/KeyboardButton"
        app:layout_constraintTop_toTopOf="@id/line_25h"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/line_12v5"
        app:layout_constraintBottom_toBottomOf="@id/line_50h" />

    <Button
        android:id="@+id/J"
        android:text="@string/j"
        style="@style/KeyboardButton"
        app:layout_constraintTop_toTopOf="@id/line_25h"
        app:layout_constraintLeft_toLeftOf="@id/line_12v5"
        app:layout_constraintRight_toRightOf="@id/line_25v"
        app:layout_constraintBottom_toBottomOf="@id/line_50h" />

    <Button
        android:id="@+id/K"
        android:text="@string/k"
        style="@style/KeyboardButton"
        app:layout_constraintTop_toTopOf="@id/line_25h"
        app:layout_constraintLeft_toLeftOf="@id/line_25v"
        app:layout_constraintRight_toRightOf="@id/line_37v5"
        app:layout_constraintBottom_toBottomOf="@id/line_50h" />

    <Button
        android:id="@+id/L"
        android:text="@string/l"
        style="@style/KeyboardButton"
        app:layout_constraintTop_toTopOf="@id/line_25h"
        app:layout_constraintLeft_toLeftOf="@id/line_37v5"
        app:layout_constraintRight_toRightOf="@id/line_50v"
        app:layout_constraintBottom_toBottomOf="@id/line_50h" />

    <Button
        android:id="@+id/M"
        android:text="@string/m"
        style="@style/KeyboardButton"
        app:layout_constraintTop_toTopOf="@id/line_25h"
        app:layout_constraintLeft_toLeftOf="@id/line_50v"
        app:layout_constraintRight_toRightOf="@id/line_62v5"
        app:layout_constraintBottom_toBottomOf="@id/line_50h" />

    <Button
        android:id="@+id/N"
        android:text="@string/n"
        style="@style/KeyboardButton"
        app:layout_constraintTop_toTopOf="@id/line_25h"
        app:layout_constraintLeft_toLeftOf="@id/line_62v5"
        app:layout_constraintRight_toRightOf="@id/line_75v"
        app:layout_constraintBottom_toBottomOf="@id/line_50h" />

    <Button
        android:id="@+id/O"
        android:text="@string/o"
        style="@style/KeyboardButton"
        app:layout_constraintTop_toTopOf="@id/line_25h"
        app:layout_constraintLeft_toLeftOf="@id/line_75v"
        app:layout_constraintRight_toRightOf="@id/line_87v5"
        app:layout_constraintBottom_toBottomOf="@id/line_50h" />

    <Button
        android:id="@+id/P"
        android:text="@string/p"
        style="@style/KeyboardButton"
        app:layout_constraintTop_toTopOf="@id/line_25h"
        app:layout_constraintLeft_toLeftOf="@id/line_87v5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/line_50h" />

    <!-- / Второй ряд кнопок -->

    <!-- Третий ряд кнопок -->

    <Button
        android:id="@+id/Q"
        android:text="@string/q"
        style="@style/KeyboardButton"
        app:layout_constraintTop_toTopOf="@id/line_50h"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/line_12v5"
        app:layout_constraintBottom_toBottomOf="@id/line_75h" />

    <Button
        android:id="@+id/R"
        android:text="@string/r"
        style="@style/KeyboardButton"
        app:layout_constraintTop_toTopOf="@id/line_50h"
        app:layout_constraintLeft_toLeftOf="@id/line_12v5"
        app:layout_constraintRight_toRightOf="@id/line_25v"
        app:layout_constraintBottom_toBottomOf="@id/line_75h" />

    <Button
        android:id="@+id/S"
        android:text="@string/s"
        style="@style/KeyboardButton"
        app:layout_constraintTop_toTopOf="@id/line_50h"
        app:layout_constraintLeft_toLeftOf="@id/line_25v"
        app:layout_constraintRight_toRightOf="@id/line_37v5"
        app:layout_constraintBottom_toBottomOf="@id/line_75h" />

    <Button
        android:id="@+id/T"
        android:text="@string/t"
        style="@style/KeyboardButton"
        app:layout_constraintTop_toTopOf="@id/line_50h"
        app:layout_constraintLeft_toLeftOf="@id/line_37v5"
        app:layout_constraintRight_toRightOf="@id/line_50v"
        app:layout_constraintBottom_toBottomOf="@id/line_75h" />

    <Button
        android:id="@+id/U"
        android:text="@string/u"
        style="@style/KeyboardButton"
        app:layout_constraintTop_toTopOf="@id/line_50h"
        app:layout_constraintLeft_toLeftOf="@id/line_50v"
        app:layout_constraintRight_toRightOf="@id/line_62v5"
        app:layout_constraintBottom_toBottomOf="@id/line_75h" />

    <Button
        android:id="@+id/V"
        android:text="@string/v"
        style="@style/KeyboardButton"
        app:layout_constraintTop_toTopOf="@id/line_50h"
        app:layout_constraintLeft_toLeftOf="@id/line_62v5"
        app:layout_constraintRight_toRightOf="@id/line_75v"
        app:layout_constraintBottom_toBottomOf="@id/line_75h" />

    <Button
        android:id="@+id/W"
        android:text="@string/w"
        style="@style/KeyboardButton"
        app:layout_constraintTop_toTopOf="@id/line_50h"
        app:layout_constraintLeft_toLeftOf="@id/line_75v"
        app:layout_constraintRight_toRightOf="@id/line_87v5"
        app:layout_constraintBottom_toBottomOf="@id/line_75h" />

    <Button
        android:id="@+id/X"
        android:text="@string/x"
        style="@style/KeyboardButton"
        app:layout_constraintTop_toTopOf="@id/line_50h"
        app:layout_constraintLeft_toLeftOf="@id/line_87v5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/line_75h" />

    <!-- / Третий ряд кнопок -->

    <!-- Четвёртый ряд кнопок -->

    <Button
        android:id="@+id/Y"
        android:text="@string/y"
        style="@style/KeyboardButton"
        app:layout_constraintTop_toTopOf="@id/line_75h"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/line_12v5"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/Z"
        android:text="@string/z"
        style="@style/KeyboardButton"
        app:layout_constraintTop_toTopOf="@id/line_75h"
        app:layout_constraintLeft_toLeftOf="@id/line_12v5"
        app:layout_constraintRight_toRightOf="@id/line_25v"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/enter"
        android:text="@string/enter"
        style="@style/DarkButton"
        app:layout_constraintTop_toTopOf="@id/line_75h"
        app:layout_constraintLeft_toLeftOf="@id/line_25v"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- / Четвёртый ряд кнопок -->

</android.support.constraint.ConstraintLayout>